# track-robot-v2

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  PROGRESS.md  README.md
.github/: latest-release-notes.md
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: architecture.md  bts7960-wiring.md  cicd.md  http-api.md  ps3-setup.md  ps4-setup.md  pwm-tuning.md  safety-failsafe.md  serial-protocol.md  web-flasher.md
firmware/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/components/cmd_nvs/: CMakeLists.txt  cmd_nvs_stub.c
firmware/components/cmd_nvs/include/: cmd_nvs.h
firmware/components/cmd_system/: CMakeLists.txt  cmd_system_stub.c
firmware/components/cmd_system/include/: cmd_system.h
firmware/components/control/: CMakeLists.txt  control_manager.c  controller_http.c  controller_ps3.c  controller_ps4.c  controller_serial.c
firmware/components/control/include/: control_frame.h  control_manager.h  controller_http.h  controller_ps3.h  controller_ps4.h  controller_serial.h
firmware/components/motion/: CMakeLists.txt  mixer_diffdrive.c
firmware/components/motion/include/: mixer_diffdrive.h
firmware/components/motor/: CMakeLists.txt  motor_bts7960.c  pwm_ledc.c
firmware/components/motor/include/: motor_bts7960.h  pwm_ledc.h
firmware/components/ps3/: CMakeLists.txt  README.md
firmware/components/ps4/: CMakeLists.txt  ps4.c
firmware/components/safety/: CMakeLists.txt  safety_failsafe.c
firmware/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
web-flasher/: app.js  index.html  manifest.json  styles.css
(+5 files in other folders)
